try and fix Configuration scale issue
- fix configuration
- add documentation chapters templates